--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "8bitwallet",
-  "version": "0.1.0",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,9 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "qrcode": "^1.4.2",
     "register-service-worker": "^1.6.2",
+    "tslib": "^1.10.0",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
+    "vue-native-websocket": "^2.0.13",
+    "vue-qrcode": "^0.2.2",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
   },
@@ -36,7 +42,9 @@
       "plugin:vue/essential",
       "@vue/standard"
     ],
-    "rules": {},
+    "rules": {
+      "vue/no-use-v-if-with-v-for": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
